# chat-bridge

./: .gitignore  README.md  config.yml  flake.nix  pyproject.toml
.github/workflows/: run-tests.yml
chat_bridge/: __main__.py  config.py  discord.py  events.py  ircclient.py  test_config.py  utils.py
