[tool.poetry]
name = "chat-bridge"
version = "0.1.0"
description = "Dolphin's Discord-IRC bridge bot"
authors = ["OatmealDome <oatmeal@dolphin-emu.org>", "Pierre Bourdon <delroth@dolphin-emu.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
chat-bridge = "chat_bridge.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pypeul = { git = "https://github.com/dolphin-emu/pypeul", rev = "7a5310670bbc5405c9e6a2e4889c65231e137443" }
discord-py = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
