[project]
name = "chat-bridge"
version = "0.1.0"
description = "Dolphin's Discord-IRC bridge bot"
authors = [
    { name = "OatmealDome", email = "oatmeal@dolphin-emu.org" },
    { name = "Pierre Bourdon", email = "delroth@dolphin-emu.org" },
]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyyaml>=6.0,<7",
    "pypeul",
    "discord-py>=2.4.0,<3",
    "token-bucket>=0.3.0",
]

[project.scripts]
chat-bridge = "chat_bridge.__main__:main"

[dependency-groups]
dev = [
    "black>=26.1.0,<27",
    "pytest>=7.2.0,<8",
]

[tool.uv]

[tool.uv.sources]
pypeul = { git = "https://github.com/dolphin-emu/pypeul", rev = "22fffeb91f0ebe82664039f0a6dfd0699322eebb" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
